fixed overflow

--- a/views/styles/style.css
+++ b/views/styles/style.css
@@ -572,8 +572,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-between {
   justify-content: space-between;
 }
-.overflow-hidden {
-  overflow: hidden;
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 .rounded-xl {
   border-radius: 0.75rem;
